@@ -1,3 +1,7 @@
+2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b10
+
+ * Fix: Check if comments are enabled at all for comments overview.
+
 2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b9
 
  * Change: Show links for comments overview only of there are comments.
